--- a/pizzak.html
+++ b/pizzak.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="bootstrap.min.js"></script>
+    <link rel="stylesheet" href="pizza.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
+    <title>Olasz pizzéria</title>
 </head>
 <body>
     <div class="container bg-white p-0">
@@ -27,6 +31,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="rolunk.html">Rólunk</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="nyilvantartas.html">Nyilvántartás</a>
               </li>
             </ul>
           </nav>
