--- a/pizzak.html
+++ b/pizzak.html
@@ -88,13 +88,13 @@
         </div>
 
         <!--Ajánlat-->
-        <section class="p-5 my-4">
-            Minden nap 14:00 és 16:00 között egyedülálló akció! Ha két pizzát rendelsz, ajándékba küldünk egy másfél literes Coca Cola-t! 
+        <section class="p-5 my-4 w-50 text-center text-white font-weight-bold bg-info" id="ajanlat">
+            Minden nap 14:00 és 16:00 között egyedülálló akció!<br>Ha két pizzát rendelsz, ajándékba küldünk egy másfél literes<br>Coca Cola-t! 
         </section>
 
         <!--Lábléc-->     
         <footer class="bg-secondary p-3 text-center text-white">
-            <p>Képek forrása: Nana pizza</p>
+            <p>Képek forrása: <a href="https://nanapizza.hu" target="blank">Nana pizza</a></p>
         </footer>
 
     </div>
